# rust-rocket-crud-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml  Rocket.toml
api/src/: hero.rs  main.rs  schema.rs
