[package]
name = "hero-api"
version = "0.1.0"
authors = ["cuerpobookssd"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.2", features = ["mysql"] }
# diesel_codegen = { version = "0.16.1", features = ["mysql"] }
r2d2 = "0.8.4"
r2d2-diesel = "1.0.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
# features = ["json", "diesel_mysql_pool"]
features = ["json"]
